GNOME Bugzilla – Bug 706380
checkout: too many open files
Last modified: 2013-08-21 13:30:14 UTC
See: https://bugzilla.gnome.org/show_bug.cgi?id=687223#c1 This is really a fundamental design issue with GLib; however, we can work around it in a few ways: 1) When we're root, bump up our own fd limit 2) Drop the parallelism =(
Created attachment 252495 [details] [review] libostree: Check out directories depth-first in serial (rather than parallel) The way we recurse into subdirectories in parallel makes it far too easy to hit up against the arbitrary Linux fd limit of 1024. This is a speed hit, but it's the best we can do for now.
Created attachment 252551 [details] [review] libostree: Check out directories depth-first in serial, switch to sync API The way we recurse into subdirectories in parallel makes it far too easy to hit up against the arbitrary Linux fd limit of 1024. Since the fix here is about dropping parallelism, let's just go all the way for now and make a plain old synchronous API =( This does simplify both internal callers which wanted a sync API anyways.
Review of attachment 252551 [details] [review]: Looks good.
Attachment 252551 [details] pushed as caf6be3 - libostree: Check out directories depth-first in serial, switch to sync API